--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -9,8 +9,8 @@ main a:hover {
 	font-weight: bolder;
 }
 article:nth-child(even) {
-	background-color: rgba(204, 204, 166, 0.8);
+	background-color: $background-color-even;
 }
 article:nth-child(odd) {
-	background-color: rgba(197, 197, 191, 0.8);
+	background-color: $background-color-odd;
 }
