--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,5 +1,5 @@
 $opacity: 0.8;
 $max-height: 300px;
-$background-color-odd: rgba(197, 197, 191, 0.8);
-$background-color-even: rgba(204, 204, 166, 0.8);
+$background-color-odd: rgb(226, 226, 191);
+$background-color-even: rgb(204, 204, 166);
 
