Se agregaron mixins y se editó levemente el texto principal en about-us.html

--- a/scss/views/_albums.scss
+++ b/scss/views/_albums.scss
@@ -16,20 +16,10 @@
 	margin-left: 5%;
 }
 .youtube {
-	margin: 0 15px;
-	opacity: $opacity;
-    color: red;
-    &:hover {
-        opacity: 1;
-    }
+	@include streaming(red);
 }
 .spotify {
-    margin: 0 15px;
-	opacity: $opacity;
-    color: rgb(27, 179, 27);
-    &:hover {
-        opacity: 1;
-    }
+    @include streaming(rgb(27, 179, 27));
 }
 .details {
 	text-align: justify;
