--- a/css/styles.css
+++ b/css/styles.css
@@ -12,15 +12,15 @@ main a:hover {
 }
 
 article:nth-child(even) {
-  background-color: rgb(204, 204, 166);
+  background-color: rgb(250, 250, 250);
 }
 
 article:nth-child(odd) {
-  background-color: rgb(226, 226, 191);
+  background-color: rgb(240, 240, 205);
 }
 
 footer {
-  background-color: rgb(241, 241, 189);
+  background-color: rgb(223, 223, 168);
 }
 footer a:hover {
   font-weight: bolder;
@@ -47,7 +47,7 @@ header img {
 }
 
 .about-us {
-  background-color: rgb(204, 204, 166);
+  background-color: rgb(250, 250, 250);
 }
 .about-us p {
   text-align: justify;
@@ -111,11 +111,11 @@ header img {
 }
 
 .feedbacks {
-  background-color: rgb(226, 226, 191);
+  background-color: rgb(250, 250, 250);
 }
 .feedbacks fieldset {
   background-color: rgb(138, 215, 245);
-  border: 1px dotted blue;
+  border: 1px solid blue;
 }
 
 /* News */
